fixed refresh issue for scores and increased font size for signup

--- a/client/megafanz/src/pages/login/login.scss
+++ b/client/megafanz/src/pages/login/login.scss
@@ -1,6 +1,8 @@
-.ion_input{
-	border-bottom: 2px;
-}
-.invalid {
-	border: 1px solid #ea6153;
+page-login {
+	.ion_input{
+		border-bottom: 2px;
+	}
+	.invalid {
+		border: 1px solid #ea6153;
+	}
 }
