Fixed formatting and deployment issues

--- a/client/megafanz/src/pages/signup/signup.scss
+++ b/client/megafanz/src/pages/signup/signup.scss
@@ -1,6 +1,6 @@
 page-signup {
 	//todo: need to increase font but below is not working so manually did it to each field
 	ion-label {
-		font-size: larger;
+		font-size: medium !important;
 	}
 }
